Adds Games for YOUnity application

--- a/clubs.html
+++ b/clubs.html
@@ -107,7 +107,7 @@
           <div class="col-xs-12">
             <h2 class="club-heading">Omaha Public Library</h2>
             <h3 class="sub-club">Abrahams Branch</h3>
-            <h4 class="sub-club">htm&#60elle&#47;&#62 masters: Intermediate Web Development</h4>
+            <h4 class="sub-club">Games for YOUnity</h4>
           </div>
           <div class="col-xs-12 col-sm-4">
 
@@ -120,14 +120,14 @@
           <div class="col-xs-12 col-sm-4">
             <h4>Saturdays 9:30am-12:30pm</h4>
             <p>6th-12th grade</p>
-            <p><span>Instructor:</span> Wendy Holley</p>
+            <p><span>Instructor:</span> Eris Koleszar</p>
           </div>
           <div class="col-xs-12 col-sm-4">
               <h4>Accepting Applications!</h4>
-             <a type="button" class="btn btn-default" href="https://goo.gl/forms/BQdwamcfEycF8eo13" target="_blank">Apply Now</a>
-             <p><span>Applications Due:</span> Thursday, October 19</p>
-             <p><span>Session Starts:</span> Saturday, October 21</p>
-            <p><span>Session Ends:</span> Saturday, February 10</p>
+             <a type="button" class="btn btn-default" href="https://goo.gl/forms/FKtYEAD9pTlmd8ZL2" target="_blank">Apply Now</a>
+             <p><span>Applications Due:</span> Thursday, March 8</p>
+             <p><span>Session Starts:</span> Saturday, March 10</p>
+            <p><span>Session Ends:</span> Saturday, May 19</p>
           </div>
         </div>
 
