Adds htmelle masters projects

--- a/clubs.html
+++ b/clubs.html
@@ -107,7 +107,7 @@
           <div class="col-xs-12">
             <h2 class="club-heading">Omaha Public Library</h2>
             <h3 class="sub-club">Abrahams Branch</h3>
-            <h4 class="sub-club">Games for YOUnity</h4>
+            <h4 class="sub-club">Games for YOUnity: 102</h4>
           </div>
           <div class="col-xs-12 col-sm-4">
 
@@ -123,11 +123,9 @@
             <p><span>Instructor:</span> Eris Koleszar</p>
           </div>
           <div class="col-xs-12 col-sm-4">
-              <h4>Accepting Applications!</h4>
-             <a type="button" class="btn btn-default" href="https://goo.gl/forms/FKtYEAD9pTlmd8ZL2" target="_blank">Apply Now</a>
-             <p><span>Applications Due:</span> Thursday, March 8</p>
-             <p><span>Session Starts:</span> Saturday, March 10</p>
-            <p><span>Session Ends:</span> Saturday, May 19</p>
+              <h4>Not Accepting Applications</h4>
+             <p><span>Session Starts:</span> Saturday, June 2</p>
+            <p><span>Session Ends:</span> Saturday, August 11</p>
           </div>
         </div>
 
@@ -408,6 +406,102 @@
           <p></p>
         </div>
 
+
+
+        <div class="project col-xs-12 col-md-6">
+          <img class="project-club-logo" src="img/clubs/library.jpeg">
+          <h3>Vine Referencer</h3>
+          <h4 class="sub-club">HTM&lt;elle/&gt; Masters - Brooklynn</h4>
+          <a href="https://brooklynn-james.github.io/v-r/" target="_blank">
+            <div class="project-img" style="background-image:url('img/clubs/projects/htmelle-2018/brooklynn.png')">
+            </div>
+          </a>
+          <p></p>
+        </div>
+
+
+        <div class="project col-xs-12 col-md-6">
+          <img class="project-club-logo" src="img/clubs/library.jpeg">
+          <h3>Cats of Nebraska</h3>
+          <h4 class="sub-club">HTM&lt;elle/&gt; Masters - Hailey</h4>
+          <a href="https://catladyish.github.io/cats-of-neb/" target="_blank">
+            <div class="project-img" style="background-image:url('img/clubs/projects/htmelle-2018/hailey.png')">
+            </div>
+          </a>
+          <p></p>
+        </div>
+
+        <div class="project col-xs-12 col-md-6">
+          <img class="project-club-logo" src="img/clubs/library.jpeg">
+          <h3>Breast Cancer Awareness</h3>
+          <h4 class="sub-club">HTM&lt;elle/&gt; Masters - Anjali</h4>
+          <a href="https://anjali444.github.io/breast-cancer/" target="_blank">
+            <div class="project-img" style="background-image:url('img/clubs/projects/htmelle-2018/anjali.png')">
+            </div>
+          </a>
+          <p></p>
+        </div>
+
+
+
+
+        <div class="project col-xs-12 col-md-6">
+          <img class="project-club-logo" src="img/clubs/library.jpeg">
+          <h3>Harry Potter</h3>
+          <h4 class="sub-club">HTM&lt;elle/&gt; Masters - Apurva</h4>
+          <a href="https://bluecupcakes17.github.io/harry-potter/" target="_blank">
+            <div class="project-img" style="background-image:url('img/clubs/projects/htmelle-2018/apurva.png')">
+            </div>
+          </a>
+          <p></p>
+        </div>
+
+
+
+        <div class="project col-xs-12 col-md-6">
+          <img class="project-club-logo" src="img/clubs/library.jpeg">
+          <h3>Destress</h3>
+          <h4 class="sub-club">HTM&lt;elle/&gt; Masters - Nevaeh</h4>
+          <a href="https://yamikoi.github.io/DeStressGIFS/" target="_blank">
+            <div class="project-img" style="background-image:url('img/clubs/projects/htmelle-2018/nevaeh.png')">
+            </div>
+          </a>
+          <p></p>
+        </div>
+
+        <div class="project col-xs-12 col-md-6">
+          <img class="project-club-logo" src="img/clubs/library.jpeg">
+          <h3>Peak Performance</h3>
+          <h4 class="sub-club">HTM&lt;elle/&gt; Masters - Ja'Leah</h4>
+          <a href="https://jcarter2590.github.io/peak_performance/" target="_blank">
+            <div class="project-img" style="background-image:url('img/clubs/projects/htmelle-2018/jaleah.png')">
+            </div>
+          </a>
+          <p></p>
+        </div>
+
+        <div class="project col-xs-12 col-md-6">
+          <img class="project-club-logo" src="img/clubs/library.jpeg">
+          <h3>Pokemon</h3>
+          <h4 class="sub-club">HTM&lt;elle/&gt; Masters - Izzy</h4>
+          <a href="https://thegamingteddybear.github.io/Pokemon-world/" target="_blank">
+            <div class="project-img" style="background-image:url('img/clubs/projects/htmelle-2018/izzy.png')">
+            </div>
+          </a>
+          <p></p>
+        </div>
+
+
+        <div class="project col-xs-12 col-md-6">
+          <img class="project-club-logo" src="img/clubs/library.jpeg">
+          <h3>Dogs</h3>
+          <h4 class="sub-club">HTM&lt;elle/&gt; Masters - Samantha</h4>
+          <a href="https://samanthastuart.github.io/dogs/" target="_blank">
+            <div class="project-img" style="background-image:url('img/clubs/projects/htmelle-2018/samantha.png')">
+            </div>
+          </a>
+          <p></p>
+        </div>
 
       </div>
 
