Correction to name

--- a/volunteers.html
+++ b/volunteers.html
@@ -556,7 +556,7 @@
         <p class="bio ellipsis-container clamped">
           <span class="badges badge-ta"></span>
           <label class="ellipsis" for="clamp-toggle-trisha">
-           A native of Southwest Iowa, Trisha's interests in web design and development started during a seventh-grade computer class and continued when she joined the Iowa 4-H Technology Team during high school. This hands-on learning was the foundation for her future. After double-majoring at Drake University with a BA in Graphic Design and Creative Advertising, Trisha began her professional career at HDR, Inc. as a graphic designer and now is the senior web designer for WoodmenLife. With her background combination of design, strategy, web design, and front-end development, she is excited to share her knowledge and experiences with minds of our youth. how smart and creative and caring they are, and I have so much hope for the future they're going to be a part of.
+           A native of Southwest Iowa, Trisha's interests in web design and development started during a seventh-grade computer class and continued when she joined the Iowa 4-H Technology Team during high school. This hands-on learning was the foundation for her future. After double-majoring at Drake University with a BA in Graphic Design and Creative Advertising, Trisha began her professional career at HDR, Inc. as a graphic designer and now is the senior web designer for WoodmenLife. With her background combination of design, strategy, web design, and front-end development, she is excited to share her knowledge and experiences with minds of our youth.
           </label>
         </p>
       </div>
