--- a/clubs.html
+++ b/clubs.html
@@ -133,7 +133,6 @@
           <div class="col-xs-12">
             <h2 class="club-heading">Do Space</h2>
             <h3 class="sub-club">Technology Library</h3>
-            <h4 class="sub-club">Girls Who Code Club</h4>
           </div>
           <div class="col-xs-12 col-sm-4">
 
@@ -144,14 +143,15 @@
             </address>
           </div>
           <div class="col-xs-12 col-sm-4">
-            <h4>Sundays 2-5pm</h4>
-            <p>6th-8th grade</p>
-            <p><span>Instructor:</span> Alexandra Millatmal</p>
+            <h4>Sundays 1-3pm</h4>
+            <p>6th-12th grade</p>
           </div>
           <div class="col-xs-12 col-sm-4">
-            <h4>Not Accepting Applications</h4>
-            <p><span>Session Starts:</span> Sunday, September 3</p>
-            <p><span>Session Ends:</span> Sunday, December 17</p>
+            <h4>Accepting Applications!</h4>
+            <a type="button" class="btn btn-default" href="http://bit.ly/DoSpaceGWC" target="_blank">Apply Now</a>
+            <p><span>Applications Due:</span> Wednesday, August 22</p>
+            <p><span>Session Starts:</span> Sunday, September 16</p>
+            <p><span>Session Ends:</span> Sunday, March 31</p>
           </div>
         </div>
 
