--- a/clubs.html
+++ b/clubs.html
@@ -79,8 +79,12 @@
           club: 'Do Space 72nd & Dodge, Omaha, NE 68114',
           lat:   41.2589604,
           lng:  -96.0268497,
-        }
-        ]
+        },
+        {
+          club: 'Marian High School | 7400 Military Ave, Omaha, NE 68134',
+          lat:   41.3005587,
+          lng:  -96.030431,
+        }]
         // Create a map object and specify the DOM element for display.
         var map = new google.maps.Map(document.getElementById('map'), {
           center: centerLatLng,
@@ -106,8 +110,8 @@
         <div class="club row">
           <div class="col-xs-12">
             <h2 class="club-heading">Omaha Public Library</h2>
-            <h3 class="sub-club">Abrahams Branch</h3>
-            <h4 class="sub-club">Games for YOUnity: 102</h4>
+            <h3 class="sub-club">Abrahams Branch | Mystery Code Society</h3>
+            <h4 class="sub-club">HTM&lt; elle &gt; </h4>
           </div>
           <div class="col-xs-12 col-sm-4">
 
@@ -120,14 +124,44 @@
           <div class="col-xs-12 col-sm-4">
             <h4>Saturdays 9:30am-12:30pm</h4>
             <p>6th-12th grade</p>
-            <p><span>Instructor:</span> Eris Koleszar</p>
+            <p><span>Instructor:</span> Sandi Barr and Trisha Gawley</p>
           </div>
           <div class="col-xs-12 col-sm-4">
-              <h4>Not Accepting Applications</h4>
-             <p><span>Session Starts:</span> Saturday, June 2</p>
-            <p><span>Session Ends:</span> Saturday, August 11</p>
+              <h4>Accepting Applications!</h4>
+              <a type="button" class="btn btn-default" href="https://goo.gl/forms/ycV6oLtsmQHH1Qu13" target="_blank">Apply Now!</a>
+              <p><span>Applications Due:</span> Monday, October 1</p>
+             <p><span>Session Starts:</span> Saturday, October 13</p>
+            <p><span>Session Ends:</span> Saturday, November 17</p>
           </div>
         </div>
+
+
+        <div class="club row">
+          <div class="col-xs-12">
+            <h2 class="club-heading">Marian High School</h2>
+            <h3 class="sub-club">Marian Style</h3>
+          </div>
+          <div class="col-xs-12 col-sm-4">
+
+            <img class="club-logo" src="img/clubs/marian-logo.jpg">
+            <address>
+              7400 Military Ave<br>
+              Omaha, NE 68134
+            </address>
+          </div>
+          <div class="col-xs-12 col-sm-4">
+            <h4>Twice monthly, 4-6 pm</h4>
+            <p>6th-12th grade</p>
+            <p><span>Instructor:</span> Sharon Genoways</p>
+          </div>
+          <div class="col-xs-12 col-sm-4">
+              <h4>Application Inquiries</h4>
+              <a type="button" class="btn btn-default" href="mailto:sgenow@omahamarian.org">Questions</a>
+             <p><span>Session Starts:</span> Monday, September 10</p>
+            <p><span>Session Ends:</span> Monday, April 29</p>
+          </div>
+        </div>
+
 
         <div class="club row">
           <div class="col-xs-12">
@@ -147,9 +181,7 @@
             <p>6th-12th grade</p>
           </div>
           <div class="col-xs-12 col-sm-4">
-            <h4>Accepting Applications!</h4>
-            <a type="button" class="btn btn-default" href="http://bit.ly/DoSpaceGWC" target="_blank">Apply Now</a>
-            <p><span>Applications Due:</span> Wednesday, September 5</p>
+            <h4>Not Accepting Applications</h4>
             <p><span>Session Starts:</span> Sunday, September 16</p>
             <p><span>Session Ends:</span> Sunday, March 31</p>
           </div>
